--- a/css/resume.css
+++ b/css/resume.css
@@ -296,7 +296,7 @@ p {
 }
 
 .projects .card .card-description {
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 .projects .card .card-buttons {
@@ -306,15 +306,15 @@ p {
 
 .projects .card .card-buttons .card-button--site,
 .projects .card .card-buttons .card-button--code,
-.projects .card .card-buttons .card-button--presentation {
-  width: 150px;
+.projects .card .card-buttons .card-button--demo {
+  width: 170px;
   height: 60px;
   text-align: center;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 5px;
+  margin: 6px;
 
   opacity: 1;
   color: var(--white);
@@ -344,7 +344,7 @@ p {
 .projects .card .card-buttons .card-button--code {
   border: 1px solid var(--gray);
 }
-.projects .card .card-buttons .card-button--presentation {
+.projects .card .card-buttons .card-button--demo {
   border: 1px solid var(--gray);
 }
 
